all: change align-content default value; fp: fix levelPadding height && BoxShadow backgroundColor

--- a/temps/mp/src/style/mobile.less
+++ b/temps/mp/src/style/mobile.less
@@ -55,6 +55,7 @@ a {
   height: 3 * 100px;
   font-size: 0.4 * 100px;
   line-height: 0.44 * 100px;
+  align-content: flex-start;
 }
 
 .U-photo {
