--- a/temps/pcweb/src/style/client.less
+++ b/temps/pcweb/src/style/client.less
@@ -60,6 +60,7 @@ a {
   font-size: 14px;
   line-height: 20px;
   overflow: hidden;
+  align-content: flex-start;
 }
 
 .U-photo {
