--- a/temps/web/src/style/client.less
+++ b/temps/web/src/style/client.less
@@ -54,6 +54,7 @@ a {
   height: 3rem;
   font-size: 0.4rem;
   line-height: 0.44rem;
+  align-content: flex-start;
 }
 
 .U-photo {
